fixed timeline panel z-index

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -229,6 +229,7 @@ hr.small {
 
 .agenda li {
 	position: relative;
+	padding: 5px
 }
 
 #plenary2 {
