--- a/css/timeline.css
+++ b/css/timeline.css
@@ -36,6 +36,7 @@
   width: 41%;
   padding: 0 20px 20px 30px;
   text-align: right;
+  z-index: 9999;
 }
 
 .timeline>li .timeline-panel:before {
@@ -255,8 +256,5 @@
   .timeline > li .line {
     display: none;
   }
-  .agenda li {
-	padding: 5px;
-}
 
 }
